--- a/package.json
+++ b/package.json
@@ -25,23 +25,38 @@
 				"adonisjs.autocomplete.quickJump": {
 					"type": "boolean",
 					"default": true,
-					"description": "Use 'Ctrl' or 'Alt' + click"
+					"description": "Quick jump between files using 'Ctrl' + Click"
 				},
-				"adonisjs.autocomplete.views": {
+				"adonisjs.autocomplete.folderTip": {
+					"type": "boolean",
+					"default": true,
+					"description": "Display file path name on hover"
+				},
+				"adonisjs.autocomplete.maxLinesCount": {
+					"type": "integer",
+					"default": 1200,
+					"description": "Maximum lines of text to scan for autocompletion"
+				},
+				"adonisjs.autocomplete.viewsDirectories": {
 					"type": "array",
 					"description": "Paths to the directory containing edge views",
 					"default": [
 						"resources/views"
 					]
 				},
-				"adonisjs.autocomplete.extensions": {
+				"adonisjs.autocomplete.viewsExtensions": {
 					"type": "array",
 					"description": "Supported file extension for view completion",
 					"default": [
 						".edge"
 					]
 				},
-				"adonisjs.autocomplete.viewRegex": {
+				"adonisjs.autocomplete.viewsRegex": {
+					"type": "string",
+					"description": "Regular expression to match handle edge includes",
+					"default": "(?<=@include\\()(['\"])[^'\"]*\\1"
+				},
+				"adonisjs.autocomplete.viewsCompletionRegex": {
 					"type": "string",
 					"description": "Regular expression to match handle edge includes",
 					"default": "(?<=@include\\()(['\"])[^'\"]*\\1"
@@ -71,10 +86,10 @@
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^10.12.21",
 		"@types/vscode": "^1.39.0",
-		"glob": "^7.1.4",
+		"glob": "^7.1.5",
 		"mocha": "^6.1.4",
-		"typescript": "^3.3.1",
 		"tslint": "^5.12.1",
+		"typescript": "^3.3.1",
 		"vscode-test": "^1.2.0"
 	}
 }
