Test(Directory): Return Level One Directories In Child Directory

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,6 +20,7 @@
       "request": "launch",
       "runtimeExecutable": "${execPath}",
       "args": [
+        "${workspaceFolder}/src/test/data/",
         "--extensionDevelopmentPath=${workspaceFolder}",
         "--extensionTestsPath=${workspaceFolder}/out/test/suite/index"
       ],
