--- a/package.json
+++ b/package.json
@@ -17,7 +17,92 @@
 	],
 	"main": "./out/extension.js",
 	"contributes": {
-		"commands": [],
+		"commands": [
+			{
+				"title": "Adonis: Addon",
+				"command": "adonisjs.addon"
+			},
+			{
+				"title": "Adonis: Install",
+				"command": "adonisjs.install"
+			},
+			{
+				"title": "Adonis: serve",
+				"command": "adonisjs.serve"
+			},
+			{
+				"title": "Adonis: Install",
+				"command": "adonisjs.install"
+			},
+			{
+				"title": "Adonis: Repl",
+				"command": "adonisjs.repl"
+			},
+			{
+				"title": "Adonis: Key Generate",
+				"command": "adonisjs.key.generate"
+			},
+			{
+				"title": "Adonis: Make Controller",
+				"command": "adonisjs.make.controller"
+			},
+			{
+				"title": "Adonis: Make Model",
+				"command": "adonisjs.make.model"
+			},
+			{
+				"title": "Adonis: Make Trait",
+				"command": "adonisjs.make.trait"
+			},
+			{
+				"title": "Adonis: Make View",
+				"command": "adonisjs.make.view"
+			},
+			{
+				"title": "Adonis: Make Middleware",
+				"command": "adonisjs.make.middleware"
+			},
+			{
+				"title": "Adonis: Make Command",
+				"command": "adonisjs.make.command"
+			},
+			{
+				"title": "Adonis: Make Exception",
+				"command": "adonisjs.make.exception"
+			},
+			{
+				"title": "Adonis: Make Hook",
+				"command": "adonisjs.make.hook"
+			},
+			{
+				"title": "Adonis: Make Migration",
+				"command": "adonisjs.make.migration"
+			},
+			{
+				"title": "Adonis: Make Listener",
+				"command": "adonisjs.make.listener"
+			},
+			{
+				"title": "Adonis: Make Provider",
+				"command": "adonisjs.make.provider"
+			},
+			{
+				"title": "Adonis: Make Exception Handler",
+				"command": "adonisjs.make.ehandler"
+			},
+			{
+				"title": "Adonis: Make Seed",
+				"command": "adonisjs.make.seed"
+			},
+			{
+				"title": "Adonis: Route List",
+				"command": "adonisjs.route.list"
+			},
+			{
+				"title": "Adonis: Run Instructions",
+				"command": "adonisjs.run.instructions"
+			}
+		],
 		"configuration": {
 			"type": "object",
 			"title": "AdonisJS",
@@ -114,6 +199,7 @@
 		"vscode-test": "^1.2.0"
 	},
 	"dependencies": {
+		"@adonisjs/cli": "^4.0.12",
 		"@poppinss/module-methods-extractor": "^1.0.0",
 		"docblock": "^0.4.4",
 		"glob": "^7.1.5"
