Fix(Launch): Enable Activation Event For Typescript

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"activationEvents": [
 		"onLanguage:edge",
 		"onLanguage:javascript",
+		"onLanguage:typescript",
 		"workspaceContains:ace"
 	],
 	"main": "./out/extension.js",
