--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
 		"Snippets",
 		"Other"
 	],
+	"keywords": [
+		"adonis",
+		"edge",
+		"template",
+		"snippet",
+		"formatter",
+		"autocompletion",
+		"commands"
+	],
 	"activationEvents": [
 		"onLanguage:edge",
 		"onLanguage:javascript",
@@ -18,6 +27,17 @@
 	],
 	"main": "./out/extension.js",
 	"contributes": {
+		"grammars": [
+			{
+				"language": "edge",
+				"scopeName": "text.html.edge",
+				"path": "./src/syntaxes/edge/edge.tmLanguage.json",
+				"embeddedLanguages": {
+					"source.css": "css",
+					"source.js": "javascript"
+				}
+			}
+		],
 		"commands": [
 			{
 				"title": "🚀 Adonis: Key Generate",
