--- a/src/snippets/edge/components.json
+++ b/src/snippets/edge/components.json
@@ -1,24 +1,18 @@
 {
     "edge: @include('view')": {
         "prefix": "include",
-        "body": [
-            "@include('${1:name}')$2"
-        ],
-        "description": "Edge - include view"
+        "body": "@include('${1:name}')$2",
+        "description": "Edge: Include view"
     },
     "edge: @super": {
         "prefix": "super",
-        "body": [
-            "@super"
-        ],
-        "description": "Edge - Super extend"
+        "body": "@super",
+        "description": "Edge: Super extend"
     },
     "edge: @!component('name')": {
         "prefix": "component",
-        "body": [
-            "@!component('$1')"
-        ],
-        "description": "Edge - component self close"
+        "body": "@!component('$1')",
+        "description": "Edge: Component self close"
     },
     "edge: @component('name') ... @endcomponent": {
         "prefix": "component-block",
@@ -27,6 +21,6 @@
             "  $2",
             "@endcomponent"
         ],
-        "description": "Edge - component block"
+        "description": "Edge: Component block"
     }
 }
