Feat(Edge): Add Edge Language Support (#8)
* Feat(Language): Add HTML Language Server

* Feat(Syntax/Edge): Add Edge Syntax

* Feat(Language/Edge): Add Edge Language Support

* Fix(Edge/Format): Improve How Tags Are Formatted

* Chore(Server/Edge): Rename Language Server

* Chore: Remove HTML Language Server

--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
 		"Snippets",
 		"Other"
 	],
+	"keywords": [
+		"adonis",
+		"edge",
+		"template",
+		"snippet",
+		"formatter",
+		"autocompletion",
+		"commands"
+	],
 	"activationEvents": [
 		"onLanguage:edge",
 		"onLanguage:javascript",
@@ -18,6 +27,32 @@
 	],
 	"main": "./out/extension.js",
 	"contributes": {
+		"languages": [
+			{
+				"id": "edge",
+				"aliases": [
+					"Edge Template",
+					"Edge",
+					"edge"
+				],
+				"extensions": [
+					".edge",
+					".edge.html"
+				],
+				"configuration": "./src/syntaxes/edge/edge.configuration.jsonc"
+			}
+		],
+		"grammars": [
+			{
+				"language": "edge",
+				"scopeName": "text.html.edge",
+				"path": "./src/syntaxes/edge/edge.tmLanguage.json",
+				"embeddedLanguages": {
+					"source.css": "css",
+					"source.js": "javascript"
+				}
+			}
+		],
 		"commands": [
 			{
 				"title": "🚀 Adonis: Key Generate",
@@ -194,6 +229,9 @@
 		"@poppinss/module-methods-extractor": "^1.0.0",
 		"docblock": "^0.4.4",
 		"glob": "^7.1.5",
-		"strip-ansi": "^6.0.0"
+		"strip-ansi": "^6.0.0",
+		"vscode-html-languageservice": "^3.0.3",
+		"vscode-languageclient": "^5.2.1",
+		"vscode-languageserver-types": "^3.14.0"
 	}
 }
