--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
 	],
 	"activationEvents": [
 		"onLanguage:edge",
-		"onLanguage:javascript",
-		"onLanguage:typescript",
-		"workspaceContains:ace"
+		"workspaceContains:**/.adonisrc.json"
 	],
 	"main": "./out/extension.js",
 	"contributes": {
